--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.30",
+    "mongoose": "^8.5.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
