--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "framer-motion": "^11.3.30",
     "mongoose": "^8.5.0",
     "next": "14.2.4",
