--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongoose": "^8.5.0",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
