--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.3.30",
     "mongoose": "^8.5.0",
     "next": "14.2.4",
