restet to last commit
something went wrong wrrrr

--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.5.0",
     "axios": "^1.7.5",
-    "bcrypt": "^5.1.1",
     "framer-motion": "^11.3.30",
     "mongoose": "^8.5.0",
-    "next": "^14.2.13",
-    "next-auth": "^4.24.7",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
