--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "ecommerce-front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.5",
-    "framer-motion": "^11.3.30",
+    "@auth/mongodb-adapter": "^3.4.2",
+    "@aws-sdk/client-s3": "^3.629.0",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "formidable": "^3.5.1",
+    "framer-motion": "^11.3.0",
     "mongoose": "^8.5.0",
-    "next": "14.2.4",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "node": "^18.20.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
-    "stripe": "^16.10.0"
+    "react-icons": "^5.2.1",
+    "react-spinners": "^0.14.1",
+    "stripe": "^16.6.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
