--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.4.2",
     "@aws-sdk/client-s3": "^3.629.0",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "formidable": "^3.5.1",
     "framer-motion": "^11.3.0",
+    "micro": "^10.0.1",
     "mongoose": "^8.5.0",
-    "next": "14.2.3",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "node": "^18.20.4",
     "react": "^18",
