--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "myapp",
   "version": "0.1.0",
+  "homepage": "https://szczepanskimichal.github.io/myapp/",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.4.2",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "gh-pages": "^6.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
